--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Think in bites and pixels">
-    <meta name="author" content="Mehdi Alouane">
-	<title>Think in bites and pixels</title>
-	<link rel="stylesheet" href="style/main.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+<meta name="theme-color" content="#99DBEC">
+<title>Mehdi Alouane</title>
+<link rel="icon" href="img/favicon.png">
+<link rel="stylesheet" href="style/main.css">
+<link rel="stylesheet" href="css/animate.css">
+<script src="http://use.edgefonts.net/source-sans-pro:n3.js"></script>
 </head>
 <body>
-	<div class="container absolute">
-		<div class="container__p relative">
-			<p>I think in bits & pixels.</p>
-			<p>Friend me on <a class="link twitter" href="https://twitter.com/medo_alouane">Twitter</a>, <a class="link fb" href="https://www.facebook.com/medo.alouane1">Facebook</a>, <a class="link github" href="">Github</a>, and <a class="link spotify" href="https://play.spotify.com/user/12166955411">Spotify</a>.</p>
-			<p>Have a nice day. <a class="hi" href="mailto:pro4medo@gmail.com">Say hi</a></p>
-		</div>
-	</div>
+<article class="animated bounceIn">
+<p>I think in bits &amp; pixels.</p>
+<p>Friend me on <a href="http://twitter.com/medoalouane" target="_blank" class="blue">Twitter</a>, <a href="http://github.com/mehdi-alouane" target="_blank" class="green">Github</a>, <a href="https://www.facebook.com/medo.alouane1" target="_blank" class="fb">Facebook</a>, and <a href="https://soundcloud.com/medoalouane" target="_blank" class="orange">Soundcloud</a>.</p>
+<p>Have a nice day. <a href="mailto:pro4medo@gmail.com" class="hi">Say&nbsp;hi</a></p>
+</article>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-63696863-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
