--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-<meta name="theme-color" content="#99DBEC">
-<title>Mehdi Alouane</title>
-<link rel="icon" href="img/favicon.png">
-<link rel="stylesheet" href="style/main.css">
-<link rel="stylesheet" href="css/animate.css">
-<script src="http://use.edgefonts.net/source-sans-pro:n3.js"></script>
+    <title>Polymer app</title>
+	<link rel="stylesheet" href="css/main.css">
+	<meta charset="utf-8">
+	<meta author="pro4medo@gmail.com">
 </head>
 <body>
-<article class="animated bounceIn">
-<p>I think in bits &amp; pixels.</p>
-<p>Friend me on <a href="http://twitter.com/medoalouane" target="_blank" class="blue">Twitter</a>, <a href="http://github.com/mehdi-alouane" target="_blank" class="green">Github</a>, <a href="https://www.facebook.com/medo.alouane1" target="_blank" class="fb">Facebook</a>, and <a href="https://soundcloud.com/medoalouane" target="_blank" class="orange">Soundcloud</a>.</p>
-<p>Have a nice day. <a href="mailto:pro4medo@gmail.com" class="hi">Say&nbsp;hi</a></p>
-</article>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-63696863-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+<div class="container absolute">
+	<div class="container_badge">
+		<a href=""><img class="avatar relative" src="https://avatars3.githubusercontent.com/u/4208162?v=3&s=460" alt="Yay it's me!"></a>
+	</div>
+	<div class="container_info ">
+	<div class="about">
+		<h3 class="title">Mehdi Alouane</h3>
+		<p class="bio">
+			Hi, i'm a front-end developer / web designer currently working
+			freelacer , this my home page , if you want to know my latest work/news
+			please follow me on social media.
+		</p>
+		</div>
+		<div class="links">
+			<a href="" class="fb_link">medo.alouane</a>
+			<a href="" class="twitter_link">@medo_alouane</a>
+			<a href="" class="github_link">mehdi-alouane</a>
+			<a href="" class="gplus_link">mehdi-alouane</a>
+		</div>
+	</div>
+</div>
 </body>
 </html>
