--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Polymer app</title>
+    <title>Mehdi Alouane - Home</title>
 	<link rel="stylesheet" href="css/main.css">
 	<meta charset="utf-8">
 	<meta author="pro4medo@gmail.com">
