--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h3 class="title">Mehdi Alouane</h3>
 		<p class="bio">
 			Hi, i'm a front-end developer / web designer currently working
-			freelacer , this my home page , if you want to know my latest work/news
+			freelancer , this my home page , if you want to know my latest work/news
 			please follow me on social media.
 		</p>
 		</div>
