--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		</p>
 		</div>
 		<div class="links">
-			<a href="" class="fb_link">medo.alouane</a>
-			<a href="" class="twitter_link">@medo_alouane</a>
-			<a href="" class="github_link">mehdi-alouane</a>
-			<a href="" class="gplus_link">mehdi-alouane</a>
+			<a href="https://www.facebook.com/medo.alouane1" class="fb_link">medo.alouane</a>
+			<a href="https://twitter.com/medo_alouane" class="twitter_link">@medo_alouane</a>
+			<a href="https://github.com/mehdi-alouane" class="github_link">mehdi-alouane</a>
+			<a href="https://plus.google.com/+MehdiAlouane" class="gplus_link">mehdi-alouane</a>
 		</div>
 	</div>
 </div>
