push the big update :)
update style, html , blog and more

--- a/index.html
+++ b/index.html
@@ -18,25 +18,24 @@
 </script>
 <body>
 <div class="container absolute">
-	<div class="container_badge">
-		<a href=""><img class="avatar relative" src="https://avatars3.githubusercontent.com/u/4208162?v=3&s=460" alt="Yay it's me!"></a>
-	</div>
-	<div class="container_info ">
-	<div class="about">
-		<h3 class="title">Mehdi Alouane</h3>
-		<p class="bio">
-			Hi, i'm a front-end developer / web designer currently working
-			freelancer , this my home page , if you want to know my latest work/news
-			please follow me on social media.
-		</p>
-		</div>
-		<div class="links">
-			<a href="https://www.facebook.com/medo.alouane1" target="_blank" class="fb_link">medo.alouane</a>
-			<a href="https://twitter.com/medo_alouane" target="_blank" class="twitter_link">@medo_alouane</a>
-			<a href="https://github.com/mehdi-alouane" target="_blank" class="github_link">mehdi-alouane</a>
-			<a href="https://plus.google.com/+MehdiAlouane" target="_blank" class="gplus_link">mehdi-alouane</a>
-		</div>
-	</div>
-</div>
+    <div class="card">
+    	<div class="card_img">
+    		<div class="card_avatar">
+    		<a href="" class="link">
+    			<img src="https://avatars3.githubusercontent.com/u/4208162?v=3&s=460" alt="That's me!" class="avatar">
+    		</a>
+    		</div><!-- card header end here-->
+    		<div class="card_content">
+    		<h3 class="title">Mehdi Alouane</h3>
+    			<p class="content">Hi, i'm a front-end developer / web designer currently working freelancer , this my home page , if you want to know my latest work/news please follow me on social media.</p>
+    		</div><!--Content dev end here -->
+    		<div class="card_buttons">
+    			<a href="" class="facebook">Mehdi Alouane</a>
+    			<a href="" class="twitter">@Medo_Alouane</a>
+    			<a href="" class="github">Mehdi-Alouane</a>
+    			<a href="" class="gplus">Mehdi Alouane</a>
+    		</div>
+    	</div>
+    </div>
 </body>
 </html>
