add material design and blog

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Mehdi Alouane - Home</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<meta charset="utf-8">
 	<meta author="pro4medo@gmail.com">
 </head>
@@ -21,7 +22,7 @@
     <div class="card">
     	<div class="card_img">
     		<div class="card_avatar">
-    		<a href="" class="link">
+    		<a href="">
     			<img src="https://avatars3.githubusercontent.com/u/4208162?v=3&s=460" alt="That's me!" class="avatar">
     		</a>
     		</div><!-- card header end here-->
@@ -30,12 +31,13 @@
     			<p class="content">Hi, i'm a front-end developer / web designer currently working freelancer , this my home page , if you want to know my latest work/news please follow me on social media.</p>
     		</div><!--Content dev end here -->
     		<div class="card_buttons">
-    			<a href="" class="facebook">Mehdi Alouane</a>
-    			<a href="" class="twitter">@Medo_Alouane</a>
-    			<a href="" class="github">Mehdi-Alouane</a>
-    			<a href="" class="gplus">Mehdi Alouane</a>
+    			<a href="https://goo.gl/SBkKAC" target="_blank" class="link facebook"><i class="fa fa-facebook"></i>Mehdi Alouane</a>
+    			<a href="https://goo.gl/lKYOFr" target="_blank" class="link twitter"><i class="fa fa-twitter"></i>Medo_Alouane</a>
+    			<a href="https://goo.gl/nYzPHB" target="_blank" class="link github"><i class="fa fa-github"></i>Mehdi-Alouane</a>
+    			<a href="https://goo.gl/87psTl" target="_blank" class="link gplus"><i class="fa fa-google-plus"></i>Mehdi Alouane</a>
     		</div>
     	</div>
+    	<a href="" class="blog_link"><h3>Continue To My Blog!</h3></a>
     </div>
 </body>
 </html>
