update initial files

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     			<p class="content">Hi, i'm a front-end developer / web designer currently working freelancer , this my home page , if you want to know my latest work/news please follow me on social media.</p>
     		</div><!--Content dev end here -->
     		<div class="card_buttons">
-    			<a href="https://goo.gl/SBkKAC" target="_blank" class="link facebook"><i class="fa fa-facebook"></i>Mehdi Alouane</a>
-    			<a href="https://goo.gl/lKYOFr" target="_blank" class="link twitter"><i class="fa fa-twitter"></i>Medo_Alouane</a>
-    			<a href="https://goo.gl/nYzPHB" target="_blank" class="link github"><i class="fa fa-github"></i>Mehdi-Alouane</a>
-    			<a href="https://goo.gl/87psTl" target="_blank" class="link gplus"><i class="fa fa-google-plus"></i>Mehdi Alouane</a>
+    			<a href="https://www.facebook.com/medo.alouane1" target="_blank" class="link facebook"><i class="fa fa-facebook"></i>Mehdi Alouane</a>
+    			<a href="https://twitter.com/medo_alouane" target="_blank" class="link twitter"><i class="fa fa-twitter"></i>Medo_Alouane</a>
+    			<a href="https://github.com/mehdi-alouane" target="_blank" class="link github"><i class="fa fa-github"></i>Mehdi-Alouane</a>
+    			<a href="https://plus.google.com/+MehdiAlouane" target="_blank" class="link gplus"><i class="fa fa-google-plus"></i>Mehdi Alouane</a>
     		</div>
     	</div>
     	<a href="" class="blog_link"><h3>Continue To My Blog!</h3></a>
