--- a/index.html
+++ b/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Mehdi Alouane - Home</title>
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<meta charset="utf-8">
-	<meta author="pro4medo@gmail.com">
+  <meta charset="UTF-8">
+  <title>Pixels - A personal Website</title>
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-63696863-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 <body>
-<div class="container absolute">
-    <div class="card">
-    	<div class="card_img">
-    		<div class="card_avatar">
-    		<a href="">
-    			<img src="https://avatars3.githubusercontent.com/u/4208162?v=3&s=460" alt="That's me!" class="avatar">
-    		</a>
-    		</div><!-- card header end here-->
-    		<div class="card_content">
-    		<h3 class="title">Mehdi Alouane</h3>
-    			<p class="content">Hi, i'm a front-end developer / web designer currently working freelancer , this my home page , if you want to know my latest work/news please follow me on social media.</p>
-    		</div><!--Content dev end here -->
-    		<div class="card_buttons">
-    			<a href="https://www.facebook.com/medo.alouane1" target="_blank" class="link facebook"><i class="fa fa-facebook"></i>Mehdi Alouane</a>
-    			<a href="https://twitter.com/medo_alouane" target="_blank" class="link twitter"><i class="fa fa-twitter"></i>Medo_Alouane</a>
-    			<a href="https://github.com/mehdi-alouane" target="_blank" class="link github"><i class="fa fa-github"></i>Mehdi-Alouane</a>
-    			<a href="https://plus.google.com/+MehdiAlouane" target="_blank" class="link gplus"><i class="fa fa-google-plus"></i>Mehdi Alouane</a>
-    		</div>
-    	</div>
-    	<a href="" class="blog_link"><h3>Continue To My Blog!</h3></a>
+<div class="container">
+  <header>
+      <div class="nav">
+        <li>
+          <a href="">Github</a>
+          <a href="pages/works.html">Work</a>
+          <a href="pages/blog.html" class="blog">Blog</a>
+        </li>
+      </div>
+  </header><!--header end here-->
+  <div class="card">
+    <div class="avatar">
+      <img src="img/img.jpg" alt="That's me !">
     </div>
+    <div class="title">
+      <h1>Mehdi Alouane</h1>
+    </div>
+    <div class="about">
+      <p>Hi, i'm a front-end developer / web designer currently working freelancer , this my home page , if you want to know my latest work/news please follow me on social media.</p>
+    </div>
+
+    <div class="social-links">
+      <a href="" class="btn facebook">
+      <i class="fa fa-facebook"></i>Facebook</a>
+      <a href="" class="btn twitter">
+      <i class="fa fa-twitter"></i>Twitter</a>
+      <a href="" class="btn google">
+      <i class="fa fa-google-plus"></i>Google+</a>
+      <a href="" class="btn github">
+      <i class="fa fa-github"></i>Github</a>
+    </div>
+  </div>
+</div>
+
+
 </body>
 </html>
